[gd_scene load_steps=2 format=3 uid="uid://c7qy38g8jwibj"]

[ext_resource type="Script" path="res://game_over.gd" id="1_h546w"]

[node name="GameOver" type="Node2D"]
process_mode = 3
script = ExtResource("1_h546w")

[node name="MarginContainer" type="MarginContainer" parent="."]
offset_left = 627.0
offset_top = 277.0
offset_right = 1300.0
offset_bottom = 482.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 124
text = "Game Over"

[node name="Label2" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 64
text = "Score : 999"

[node name="HSeparator" type="HSeparator" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 120)
layout_mode = 2

[node name="Restart" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Restart"

[connection signal="pressed" from="MarginContainer/VBoxContainer/Restart" to="." method="_on_restart_pressed"]
